--- a/internal/config/config.yaml
+++ b/internal/config/config.yaml
@@ -20,10 +20,34 @@ swagger:
   basepath: "/api"
   schemes: ["http", "https"]
   title: "EchoHub API 文档"
-  description: "基于Gin、Gorm、Viper、Wire、Cobra的HTTP快速开发框架 API 文档"
+  description: "基于Echo、Gorm、Viper、Wire、Cobra的HTTP快速开发框架 API 文档"
   version: "1.0"
   contact_name: "EchoHub Team"
   contact_url: "https://github.com/HoronLee/EchoHub"
   contact_email: "support@echohub.dev"
   license_name: "MIT"
   license_url: "https://opensource.org/licenses/MIT"
+
+cors:
+  # 开发环境允许所有来源，生产环境请配置具体域名
+  allow_origins: ["*"]
+  # 允许的 HTTP 方法
+  allow_methods: ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"]
+  # 允许的请求头
+  allow_headers:
+    [
+      "Origin",
+      "Content-Type",
+      "Accept",
+      "Authorization",
+      "X-Requested-With",
+      "X-CSRF-Token",
+    ]
+  # 暴露的响应头
+  expose_headers:
+    ["Content-Length", "Content-Encoding", "Content-Type", "Authorization"]
+  # 是否允许发送凭证 (Cookie、Authorization 等)
+  # 注意：当 allow_credentials 为 true 时，allow_origins 不能为 "*"
+  allow_credentials: false
+  # 预检请求缓存时间（秒）
+  max_age: 86400
