refactor: 统一错误处理和响应层
- 新增统一的错误处理中间件 (error_handler.go)
- 增强响应辅助函数，统一成功/错误格式
- 移除已废弃的错误和结果模型 (error.go, result.go, err.go)
- 更新所有处理器和中间件以使用新的响应模式
- 更新 Swagger 文档

这次变更在 Echo 框架迁移过程中建立了统一的错误处理和 API 响应方式

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 example/
 bin/
 test/
+logs/
 Refactor.md
 
 # AI Tools
@@ -10,3 +11,6 @@ openspec/
 session-*.md
 
 configs/debug-config.yaml
+echohub.db
+
+.DS_Store
