feat(validator): 添加i18n多语言支持
- 配置新增server.locale字段，支持zh_CN和en_US
- 验证器根据配置自动切换语言
- 自定义规则支持多语言翻译定义
- 新增RegisterCustomValidation便捷方法

--- a/internal/config/config.yaml
+++ b/internal/config/config.yaml
@@ -2,6 +2,7 @@ server:
   port: "8080"
   host: "0.0.0.0"
   mode: "debug"
+  locale: "zh_CN" # 语言设置，可选值: zh_CN, en_US
 
 database:
   type: "mysql"
